--- a/src/templates/dialog/combat/combat-attack/combat-attack-dialog.hbs
+++ b/src/templates/dialog/combat/combat-attack/combat-attack-dialog.hbs
@@ -1,10 +1,10 @@
-<form class='{{cssClass}} user-combat-attack-dialog {{#if this.allowed}}allowed{{/if}}' autocomplete='off'>
+<form class='{{cssClass}} {{#if this.allowed}}allowed{{/if}}' autocomplete='off'>
   {{#> "systems/animabf/templates/common/ui/group.hbs"
     class="attack-values"
   }}
     {{>
     "systems/animabf/templates/common/ui/group-header.hbs"
-      title=(concat "Attacking " this.defender.actor.name)
+      title=(concat (localize 'macros.combat.dialog.attacking.title') this.defender.actor.name)
     }}
     {{#> "systems/animabf/templates/common/ui/group-body.hbs"
       class="attack-values"
@@ -12,27 +12,27 @@
       {{#if this.allowed}}
         <nav class="sheet-tabs tabs" data-group="primary">
           <a class="item" data-tab="combat">{{localize "anima.ui.tabs.combat"}}</a>
-          <a class="item" data-tab="mystic">{{localize "anima.ui.tabs.mystic"}}</a>
-          <a class="item" data-tab="psychic">{{localize "anima.ui.tabs.psychic"}}</a>
+          {{#if (is 'gt' this.attacker.actor.data.data.mystic.spells.length 0)}}<a class="item" data-tab="mystic">{{localize "anima.ui.tabs.mystic"}}</a>{{/if}}
+          {{#if (is 'gt' this.attacker.actor.data.data.psychic.psychicPowers.length 0)}}<a class="item" data-tab="psychic">{{localize "anima.ui.tabs.psychic"}}</a>{{/if}}
         </nav>
 
         <section class="sheet-body">
           <div class="tab combat" data-group="primary" data-tab="combat">
-            {{> 'systems/animabf/templates/dialog/combat/user-combat-attack/parts/combat.hbs' this=this}}
+            {{> 'systems/animabf/templates/dialog/combat/combat-attack/parts/combat.hbs' this=this}}
           </div>
 
           <div class="tab mystic" data-group="primary" data-tab="mystic">
-            {{> 'systems/animabf/templates/dialog/combat/user-combat-attack/parts/mystic.hbs' this=this}}
+            {{> 'systems/animabf/templates/dialog/combat/combat-attack/parts/mystic.hbs' this=this}}
           </div>
 
           <div class="tab psychic" data-group="primary" data-tab="psychic">
-            {{> 'systems/animabf/templates/dialog/combat/user-combat-attack/parts/psychic.hbs' this=this}}
+            {{> 'systems/animabf/templates/dialog/combat/combat-attack/parts/psychic.hbs' this=this}}
           </div>
         </section>
       {{else}}
         <div class='waiting-row'>
           {{>'systems/animabf/templates/common/ui/loading-indicator.hbs' class="big"}}
-          <p class='label'>Waiting for GM manage attack request...</p>
+          <p class='label'>{{localize 'macros.combat.dialog.waitRequest.title'}}</p>
         </div>
       {{/if}}
     {{/"systems/animabf/templates/common/ui/group-body.hbs"}}
