--- a/src/scss/dialog/combat-attack-dialog.scss
+++ b/src/scss/dialog/combat-attack-dialog.scss
@@ -1,16 +1,15 @@
 @import '../variable';
 
-.user-combat-attack-dialog {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-
-  width: auto !important;
+.combat-attack-dialog {
   height: auto !important;
 
+  width: 550px;
+
   .window-content {
-    width: 550px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 
   .common-group {
@@ -61,6 +60,8 @@
       justify-content: center;
       align-items: center;
 
+      margin-top: 2rem;
+
       .label {
         font-size: 1.5rem;
         font-weight: bold;
@@ -80,6 +81,10 @@
         margin-top: 1rem;
         text-align: center;
       }
+    }
+
+    .abf-button {
+      margin-top: 2rem;
     }
   }
 }
