--- a/src/scss/dialog/combat-request-dialog.scss
+++ b/src/scss/dialog/combat-request-dialog.scss
@@ -1,15 +1,17 @@
 @import '../variable';
 
 .combat-request {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-
-  margin: 0.5rem;
-  margin-bottom: 2rem;
-
   width: 700px;
+
+  .window-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    margin: 0.5rem;
+    margin-bottom: 2rem;
+  }
 
   .label.title {
     font-size: 2rem;
@@ -32,6 +34,8 @@
     display: grid;
     grid-template-columns: 1fr 0.25fr 1fr;
     grid-column-gap: 1rem;
+
+    margin-bottom: 3rem;
 
     width: 100%;
     height: 100%;
