feat: add websocket combat system

--- a/src/scss/animabf.scss
+++ b/src/scss/animabf.scss
@@ -6,6 +6,7 @@
 
 @import 'actor/actor-sheet.scss';
 @import 'items/items-sheet.scss';
+@import 'chat/combat-result-message.scss';
 @import 'custom-hotbar/custom-hotbar.scss';
 
 @import 'dialog/gm-combat-dialog.scss';
