--- a/src/scss/custom-hotbar/custom-hotbar.scss
+++ b/src/scss/custom-hotbar/custom-hotbar.scss
@@ -17,7 +17,8 @@
       width: 3.2rem;
       height: 3.2rem;
 
-      &:hover {
+      &:hover,
+      &.hover {
         img {
           filter: invert(1);
         }
