--- a/src/scss/dialog/gm-combat-dialog.scss
+++ b/src/scss/dialog/gm-combat-dialog.scss
@@ -6,12 +6,8 @@
   justify-content: center;
   align-items: center;
 
-  width: auto !important;
+  width: 900px !important;
   height: auto !important;
-
-  .window-content {
-    width: 1000px;
-  }
 
   .versus-label {
     display: flex;
