--- a/src/templates/custom-hotbar/custom-hotbar.hbs
+++ b/src/templates/custom-hotbar/custom-hotbar.hbs
@@ -1,31 +1,23 @@
 <nav class='custom-action-bar'>
   {{#if this.isGM}}
     <ol class='macros'>
-      <div class='custom-macro'>
-        <img
-          title='{{localize 'customHotbar.damageCalculator'}}'
-          id='custom-hotbar-damage-calculator'
-          src='systems/animabf/assets/icons/game-icons.net/ffffff/delapouite/calculator.svg'
-        />
+      <div
+        title='{{localize 'customHotbar.damageCalculator'}}'
+        id='custom-hotbar-damage-calculator'
+        class='custom-macro'
+      >
+        <img src='systems/animabf/assets/icons/game-icons.net/ffffff/delapouite/calculator.svg' />
         <p class='shortcut'>ctrl + 1</p>
       </div>
-      <div class='custom-macro'>
-        <img
-          title='{{localize 'customHotbar.sendAttack'}}'
-          id='custom-hotbar-send-attack'
-          src='/systems/animabf/assets/icons/game-icons.net/ffffff/lorc/sword-clash.svg'
-        />
+      <div title='{{localize 'customHotbar.sendAttack'}}' id='custom-hotbar-send-attack' class='custom-macro'>
+        <img src='/systems/animabf/assets/icons/game-icons.net/ffffff/lorc/sword-clash.svg' />
         <p class='shortcut'>ctrl + 2</p>
       </div>
     </ol>
   {{else}}
     <ol class='macros'>
-      <div class='custom-macro'>
-        <img
-          title='{{localize 'customHotbar.sendAttack'}}'
-          id='custom-hotbar-send-attack-request'
-          src='/systems/animabf/assets/icons/game-icons.net/ffffff/lorc/sword-clash.svg'
-        />
+      <div title='{{localize 'customHotbar.sendAttack'}}' id='custom-hotbar-send-attack-request' class='custom-macro'>
+        <img src='/systems/animabf/assets/icons/game-icons.net/ffffff/lorc/sword-clash.svg' />
         <p class='shortcut'>ctrl + 1</p>
       </div>
     </ol>
