fix: minor combat system fix and i18n

--- a/src/scss/dialog/generic-dialog.scss
+++ b/src/scss/dialog/generic-dialog.scss
@@ -25,6 +25,14 @@
   border-radius: 0.5rem;
   overflow: hidden;
 
+  &.no-close {
+    .window-header {
+      .header-button {
+        display: none !important;
+      }
+    }
+  }
+
   .window-header {
     width: 100%;
     background-color: $red;
