--- a/src/templates/dialog/combat/combat-defense/parts/mystic.hbs
+++ b/src/templates/dialog/combat/combat-defense/parts/mystic.hbs
@@ -11,8 +11,8 @@
   disabled=this.defenseSent
   inputName='defender.mystic.magicProjectionType'
 }}
-  <option {{#if (is "eq" this.defender.mystic.magicProjectionType 'normal')}}selected{{/if}} value='normal'>{{concat (localize 'macros.combat.dialog.magicProjection.normal.title') " (" this.attacker.actor.data.data.mystic.magicProjection.final.value ")" }}</option>
-  <option {{#if (is "eq" this.defender.mystic.magicProjectionType 'defensive')}}selected{{/if}} value='defensive'>{{concat (localize 'macros.combat.dialog.magicProjection.offensive.title') " (" this.attacker.actor.data.data.mystic.magicProjection.imbalance.offensive.final.value ")" }}</option>
+  <option {{#if (is "eq" this.defender.mystic.magicProjectionType 'normal')}}selected{{/if}} value='normal'>{{concat (localize 'macros.combat.dialog.magicProjection.normal.title') " (" this.defender.actor.data.data.mystic.magicProjection.final.value ")" }}</option>
+  <option {{#if (is "eq" this.defender.mystic.magicProjectionType 'defensive')}}selected{{/if}} value='defensive'>{{concat (localize 'macros.combat.dialog.magicProjection.offensive.title') " (" this.defender.actor.data.data.mystic.magicProjection.imbalance.offensive.final.value ")" }}</option>
 {{/'systems/animabf/templates/common/ui/custom-select.hbs'}}
 
 {{#> 'systems/animabf/templates/common/ui/custom-select.hbs'
