changes: add running meters calculation

--- a/src/scss/actor/parts/header.scss
+++ b/src/scss/actor/parts/header.scss
@@ -152,8 +152,8 @@
         margin-top: 0.5rem;
 
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-column-gap: 0.5rem;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-column-gap: 0.25rem;
       }
 
       .first-row {
