--- a/src/templates/actor/parts/general/general.hbs
+++ b/src/templates/actor/parts/general/general.hbs
@@ -11,6 +11,8 @@
         <div>
           {{> "systems/animabf/templates/actor/parts/general/parts/level.hbs"}}
           {{> "systems/animabf/templates/actor/parts/general/parts/experience.hbs"}}
+          {{> "systems/animabf/templates/actor/parts/general/parts/presence.hbs"}}
+          {{> "systems/animabf/templates/actor/parts/general/parts/destiny-points.hbs"}}
           {{> "systems/animabf/templates/actor/parts/general/parts/aspect.hbs"}}
         </div>
         {{> "systems/animabf/templates/actor/parts/general/parts/description.hbs"}}
