changes: add psychic power item sheet

--- a/src/scss/items/items-sheet.scss
+++ b/src/scss/items/items-sheet.scss
@@ -4,3 +4,4 @@
 @import './ammo/ammo.scss';
 @import './armor/armor.scss';
 @import './spell/spell.scss';
+@import './psychic-power/psychic-power.scss';
