feat: add special field to weapon attack and block

--- a/src/scss/actor/parts/combat.scss
+++ b/src/scss/actor/parts/combat.scss
@@ -89,7 +89,12 @@
       box-shadow: $card-box-shadow;
 
       .attack,
-      .block,
+      .block {
+        .input {
+          border: 1px white solid;
+        }
+      }
+
       .damage,
       .integrity,
       .breaking,
