--- a/src/templates/actor/parts/general/parts/aspect.hbs
+++ b/src/templates/actor/parts/general/parts/aspect.hbs
@@ -42,11 +42,11 @@
     }}
     {{>
     "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
-      class="genre"
-      title=(localize 'anima.ui.aspectSection.genre.title')
+      class="gender"
+      title=(localize 'anima.ui.aspectSection.gender.title')
       inputType="text"
-      inputName="data.general.aspect.genre.value"
-      inputValue=data.data.general.aspect.genre.value
+      inputName="data.general.aspect.gender.value"
+      inputValue=data.data.general.aspect.gender.value
     }}
     {{>
     "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
