--- a/src/scss/dialog/gm-combat-dialog.scss
+++ b/src/scss/dialog/gm-combat-dialog.scss
@@ -84,7 +84,8 @@
 
         .fatigue,
         .at-value,
-        .defense-count {
+        .defense-count,
+        .weapon-quality {
           flex-basis: 20%;
 
           .input-container {
