--- a/src/templates/dialog/combat/gm-combat-dialog.hbs
+++ b/src/templates/dialog/combat/gm-combat-dialog.hbs
@@ -327,7 +327,7 @@
                   title=(localize 'macros.combat.dialog.defenseCount.title')
                   inputType="text"
                   disabled=true
-                  inputValue=this.defender.result.values.defenseCount
+                  inputValue=this.defender.result.values.multipleDefensesPenalty
                 }}
                 {{#if (is 'neq' this.defender.result.values.at undefined)}}
                   {{>
@@ -341,8 +341,16 @@
                 {{/if}}
                 {{>
                 "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
-                  class="defense"
-                  title=(localize 'macros.combat.dialog.defense.title')
+                  class="roll"
+                  title=(localize 'macros.combat.dialog.rolled.title')
+                  inputType="text"
+                  disabled=true
+                  inputValue=this.defender.result.values.roll
+                }}
+                {{>
+                "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
+                  class="total"
+                  title=(localize 'macros.combat.dialog.total.title')
                   inputType="text"
                   disabled=true
                   inputValue=this.defender.result.values.total
@@ -524,9 +532,11 @@
               </button>
             {{/unless}}
           {{/if}}
-          <button title='{{localize 'macros.combat.dialog.applyAndCloseButtonTooltip.title'}}' class='abf-button apply-values'>
-            {{localize 'macros.combat.dialog.applyAndCloseButton.title'}}
-          </button>
+          {{#if (or (is 'gt' this.calculations.damage 0) (is 'gt' this.defender.result.values.fatigue 0) (is 'gt' this.attacker.result.values.fatigueUsed 0))}}
+            <button title='{{localize 'macros.combat.dialog.applyAndCloseButtonTooltip.title'}}' class='abf-button apply-values'>
+              {{localize 'macros.combat.dialog.applyAndCloseButton.title'}}
+            </button>
+          {{/if}}
           <button class='abf-button cancel-button'>
             {{localize 'macros.combat.dialog.cancelButton.title'}}
           </button>
