hotfix: not is not a handlebar helper

--- a/src/templates/dialog/combat/gm-combat-dialog.hbs
+++ b/src/templates/dialog/combat/gm-combat-dialog.hbs
@@ -496,12 +496,11 @@
             disabled=true
             inputValue=this.calculations.difference
           }}
-          {{#if (and (not this.calculations.canCounter) this.calculations.damage (is 'gt' this.calculations.damage 0))}}
+          {{#if (is 'gt' this.calculations.damage 0)}}
             {{>
             "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
               class="damage-deal"
               title=(localize 'macros.combat.dialog.damageDeal.title')
-              inputType="text"
               disabled=true
               inputValue=this.calculations.damage
             }}
