--- a/src/templates/dialog/combat/combat-defense/parts/combat.hbs
+++ b/src/templates/dialog/combat/combat-defense/parts/combat.hbs
@@ -37,6 +37,25 @@
   <p class='label no-fatigue'>{{localize 'macros.combat.dialog.notEnoughFatigue.title'}}</p>
 {{/if}}
 
+{{#if this.defender.combat.unarmed}}
+  {{#> 'systems/animabf/templates/common/ui/custom-select.hbs'
+    title=(localize 'macros.combat.dialog.weapon.title')
+    disabled=true
+  }}
+    <option>Unarmed</option>
+  {{/'systems/animabf/templates/common/ui/custom-select.hbs'}}
+{{else}}
+  {{#> 'systems/animabf/templates/common/ui/custom-select.hbs'
+    title=(localize 'macros.combat.dialog.weapon.title')
+    disabled=this.defenseSent
+    inputName='defender.combat.weaponUsed'
+  }}
+    {{#each this.defender.actor.data.data.combat.weapons}}
+      <option {{#if (is 'eq' this._id ../this.defender.combat.weaponUsed)}}selected{{/if}} value='{{this._id}}'>{{localize 'macros.combat.dialog.weaponRow.defense.title' name=this.name value=this.data.block.final.value}}</option>
+    {{/each}}
+  {{/'systems/animabf/templates/common/ui/custom-select.hbs'}}
+{{/if}}
+
 {{#> 'systems/animabf/templates/common/ui/custom-select.hbs'
   class="defense-count"
   title=(localize 'macros.combat.dialog.defenseCount.title')
