--- a/src/templates/dialog/combat/gm-combat-dialog.hbs
+++ b/src/templates/dialog/combat/gm-combat-dialog.hbs
@@ -12,10 +12,10 @@
       }}
         <div class='combatant-profile'>
           <div class='image'>
-            <img src='{{this.attacker.actor.img}}' data-edit='img' title='{{this.attacker.actor.name}}' />
+            <img src='{{this.attacker.actor.img}}' data-edit='img' title='{{this.attacker.token.name}}' />
           </div>
           <p class='label name'>
-            {{this.attacker.actor.name}}
+            {{this.attacker.token.name}}
           </p>
         </div>
 
@@ -255,10 +255,10 @@
       }}
         <div class='combatant-profile'>
           <div class='image'>
-            <img src='{{this.defender.actor.img}}' data-edit='img' title='{{this.defender.actor.name}}' />
+            <img src='{{this.defender.actor.img}}' data-edit='img' title='{{this.defender.token.name}}' />
           </div>
           <p class='label name'>
-            {{this.defender.actor.name}}
+            {{this.defender.token.name}}
           </p>
         </div>
 
