--- a/src/scss/actor/parts/domine.scss
+++ b/src/scss/actor/parts/domine.scss
@@ -83,10 +83,15 @@
       margin-top: 0.75rem;
 
       display: grid;
-      grid-template-columns: 3fr 1fr;
+      grid-template-columns: 2fr 1fr;
       grid-column-gap: 1rem;
 
       .name {
+        .input-container {
+          width: 100%;
+        }
+      }
+      .grade {
         .input-container {
           width: 100%;
         }
