--- a/src/scss/actor/parts/main.scss
+++ b/src/scss/actor/parts/main.scss
@@ -11,13 +11,16 @@
     &.secondary-tab {
       margin-top: 0;
       height: 1.2rem;
+      line-height: 1.2rem;
     }
+
+    flex: 0 0 2rem;
+    line-height: 2rem;
 
     height: 2rem;
     display: flex;
     justify-content: center;
     align-items: center;
-    line-height: inherit;
 
     margin-top: 0.75rem;
     margin-bottom: 0.75rem;
@@ -32,6 +35,7 @@
       font-weight: 600;
 
       display: flex;
+      flex: 1;
       justify-content: center;
       align-items: center;
 
