--- a/src/templates/actor/parts/general/general.hbs
+++ b/src/templates/actor/parts/general/general.hbs
@@ -1,5 +1,5 @@
 <div class='general'>
-  <nav class="general-tabs tabs secondary-tab" data-group="secondary">
+  <nav class="abf-tabs general-tabs tabs secondary-tab" data-group="secondary">
     <a class="item active" data-tab="general-first">{{localize "anima.ui.general.tabs.first"}}</a>
     <a class="item" data-tab="general-second">{{localize "anima.ui.general.tabs.second"}}</a>
     <a class="item" data-tab="general-third">{{localize "anima.ui.general.tabs.third"}}</a>
