--- a/src/templates/actor/parts/psychic/psychic.hbs
+++ b/src/templates/actor/parts/psychic/psychic.hbs
@@ -1,5 +1,5 @@
 <div class='psychic'>
-  <nav class="psychic-tabs tabs secondary-tab" data-group="secondary">
+  <nav class="abf-tabs psychic-tabs tabs secondary-tab" data-group="secondary">
     <a class="item active" data-tab="psychic-main">{{localize "anima.ui.psychic.tabs.main"}}</a>
     <a class="item" data-tab="psychic-powers">{{localize "anima.ui.psychic.tabs.secondaries"}}</a>
   </nav>
