--- a/src/templates/dialog/combat/combat-attack/combat-attack-dialog.hbs
+++ b/src/templates/dialog/combat/combat-attack/combat-attack-dialog.hbs
@@ -10,7 +10,7 @@
       class="attack-values"
     }}
       {{#if this.allowed}}
-        <nav class="sheet-tabs tabs" data-group="primary">
+        <nav class="abf-tabs sheet-tabs tabs" data-group="primary">
           <a class="item" data-tab="combat">{{localize "anima.ui.tabs.combat"}}</a>
           {{#if (is 'gt' this.attacker.actor.data.data.mystic.spells.length 0)}}<a class="item" data-tab="mystic">{{localize "anima.ui.tabs.mystic"}}</a>{{/if}}
           {{#if (is 'gt' this.attacker.actor.data.data.psychic.psychicPowers.length 0)}}<a class="item" data-tab="psychic">{{localize "anima.ui.tabs.psychic"}}</a>{{/if}}
